fix(navbar): improve wcag contrast

--- a/app/javascript/six/components/navbar.scss
+++ b/app/javascript/six/components/navbar.scss
@@ -118,12 +118,15 @@ $navbar-size: 40px;
   }
 
   .searchbar {
-    --searchbar-box-background: #ffffff80;
+    --searchbar-box-background: #ffffffcc;
 
     margin-bottom: 0;
 
     &:focus-within {
       --searchbar-box-background: #fff;
+    }
+    &__search::placeholder  {
+      color: rgba(70, 70, 70, 0.9)
     }
   }
 
